Accumulated the previuos and current filtered array into accumulatedrooms

--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 
 <body class="container">
 
-  <div class="appmenu">
-    Hello
-  </div>
+  <header class="appmenu">
+    Header
+  </header>
 
   <div class="header">
     <div class="slider-container">
@@ -167,7 +167,7 @@
 
 
 
-    <!-- <div class=" home">
+    <!-- <div class="home">
       <img src="./Images/house-2.jpeg" alt="Beautiful Family House" srcset="" class="home__image" />
       <h5 class="home__name">Beautiful Family House</h5>
       <div class="home__location">
@@ -195,294 +195,268 @@
         <p>$1,200,000</p>
       </div>
       <button class="home__button">contact Relators</button>
-  </div>
-  <div class="home">
-    <img src="./Images/house-3.jpeg" alt="Beautiful Family House" srcset="" class="home__image" />
-    <h5 class="home__name">Beautiful Family House</h5>
-    <div class="home__location">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-location2"></use>
-      </svg>
-      <p>USA</p>
-    </div>
-    <div class="home__roomcounts">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-user"></use>
-      </svg>
-      <p>5 rooms</p>
-    </div>
-    <div class="home__area">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-expand"></use>
-      </svg>
-      <p>325m<sup>2</sup></p>
-    </div>
-    <div class="home__price">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-key"></use>
-      </svg>
-      <p>$1,200,000</p>
-    </div>
-    <button class="home__button">contact Relators</button>
-  </div>
-  <div class="home">
-    <img src="./Images/house-4.jpeg" alt="Beautiful Family House" srcset="" class="home__image" />
-    <h5 class="home__name">Beautiful Family House</h5>
-    <div class="home__location">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-location2"></use>
-      </svg>
-      <p>USA</p>
-    </div>
-    <div class="home__roomcounts">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-user"></use>
-      </svg>
-      <p>5 rooms</p>
-    </div>
-    <div class="home__area">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-expand"></use>
-      </svg>
-      <p>325m<sup>2</sup></p>
-    </div>
-    <div class="home__price">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-key"></use>
-      </svg>
-      <p>$1,200,000</p>
-    </div>
-    <button class="home__button">contact Relators</button>
-  </div>
-  <div class="home">
-    <img src="./Images/house-5.jpeg" alt="Beautiful Family House" srcset="" class="home__image" />
-    <h5 class="home__name">Beautiful Family House</h5>
-    <div class="home__location">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-location2"></use>
-      </svg>
-      <p>USA</p>
-    </div>
-    <div class="home__roomcounts">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-user"></use>
-      </svg>
-      <p>5 rooms</p>
-    </div>
-    <div class="home__area">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-expand"></use>
-      </svg>
-      <p>325m<sup>2</sup></p>
-    </div>
-    <div class="home__price">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-key"></use>
-      </svg>
-      <p>$1,200,000</p>
-    </div>
-    <button class="home__button">contact Relators</button>
-  </div>
-  <div class="home">
-    <img src="./Images/house-6.jpeg" alt="Beautiful Family House" srcset="" class="home__image" />
-    <h5 class="home__name">Beautiful Family House</h5>
-    <div class="home__location">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-location2"></use>
-      </svg>
-      <p>USA</p>
-    </div>
-    <div class="home__roomcounts">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-user"></use>
-      </svg>
-      <p>5 rooms</p>
-    </div>
-    <div class="home__area">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-expand"></use>
-      </svg>
-      <p>325m<sup>2</sup></p>
-    </div>
-    <div class="home__price">
-      <svg class="home__icon">
-        <use xlink:href="./sprite.svg#icon-key"></use>
-      </svg>
-      <p>$1,200,000</p>
-    </div>
-    <button class="home__button">contact Relators</button>
-  </div> -->
+    </div> -->
     <!-- <div class="home">
-        <img
-          src="./Images/house-2.jpeg"
-          alt="Modern Glass Villa"
-          srcset=""
-          class="home__image"
-        />
-        <h5 class="home__name">Modern Glass Villa</h5>
-        <div class="home__location">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-location2"></use>
-          </svg>
-          <p>Canada</p>
-        </div>
-        <div class="home__roomcounts">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-user"></use>
-          </svg>
-          <p>6 rooms</p>
-        </div>
-        <div class="home__area">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-expand"></use>
-          </svg>
-          <p>450m<sup>2</sup></p>
-        </div>
-        <div class="home__price">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-key"></use>
-          </svg>
-          <p>$1,200,000</p>
-        </div>
-        <button class="home__button">contact Relators</button>
+      <img src="./Images/house-3.jpeg" alt="Beautiful Family House" srcset="" class="home__image" />
+      <h5 class="home__name">Beautiful Family House</h5>
+      <div class="home__location">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-location2"></use>
+        </svg>
+        <p>USA</p>
       </div>
-      <div class="home">
-        <img
-          src="./Images/house-3.jpeg"
-          alt="Cozy Country House"
-          srcset=""
-          class="home__image"
-        />
-        <h5 class="home__name">Cozy Country House</h5>
-        <div class="home__location">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-location2"></use>
-          </svg>
-          <p>UK</p>
-        </div>
-        <div class="home__roomcounts">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-user"></use>
-          </svg>
-          <p>4 rooms</p>
-        </div>
-        <div class="home__area">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-expand"></use>
-          </svg>
-          <p>250m<sup>2</sup></p>
-        </div>
-        <div class="home__price">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-key"></use>
-          </svg>
-          <p>$850,000</p>
-        </div>
-        <button class="home__button">contact Relators</button>
+      <div class="home__roomcounts">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-user"></use>
+        </svg>
+        <p>5 rooms</p>
       </div>
-      <div class="home">
-        <img
-          src="./Images/house-4.jpeg"
-          alt="Beautiful Family House"
-          srcset=""
-          class="home__image"
-        />
-        <h5 class="home__name">Large Rustical Villa</h5>
-        <div class="home__location">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-location2"></use>
-          </svg>
-          <p>USA</p>
-        </div>
-        <div class="home__roomcounts">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-user"></use>
-          </svg>
-          <p>5 rooms</p>
-        </div>
-        <div class="home__area">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-expand"></use>
-          </svg>
-          <p>325m<sup>2</sup></p>
-        </div>
-        <div class="home__price">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-key"></use>
-          </svg>
-          <p>$1,200,000</p>
-        </div>
-        <button class="home__button">contact Relators</button>
+      <div class="home__area">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-expand"></use>
+        </svg>
+        <p>325m<sup>2</sup></p>
       </div>
-      <div class="home">
-        <img
-          src="./Images/house-5.jpeg"
-          alt="Beautiful Family House"
-          srcset=""
-          class="home__image"
-        />
-        <h5 class="home__name">Majestic Place House</h5>
-        <div class="home__location">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-location2"></use>
-          </svg>
-          <p>USA</p>
-        </div>
-        <div class="home__roomcounts">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-user"></use>
-          </svg>
-          <p>5 rooms</p>
-        </div>
-        <div class="home__area">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-expand"></use>
-          </svg>
-          <p>325m<sup>2</sup></p>
-        </div>
-        <div class="home__price">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-key"></use>
-          </svg>
-          <p>$1,200,000</p>
-        </div>
-        <button class="home__button">contact Relators</button>
+      <div class="home__price">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-key"></use>
+        </svg>
+        <p>$1,200,000</p>
       </div>
-      <div class="home">
-        <img
-          src="./Images/house-6.jpeg"
-          alt="Beautiful Family House"
-          srcset=""
-          class="home__image"
-        />
-        <h5 class="home__name">Modern Family Apartment</h5>
-        <div class="home__location">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-location2"></use>
-          </svg>
-          <p>USA</p>
-        </div>
-        <div class="home__roomcounts">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-user"></use>
-          </svg>
-          <p>5 rooms</p>
-        </div>
-        <div class="home__area">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-expand"></use>
-          </svg>
-          <p>325m<sup>2</sup></p>
-        </div>
-        <div class="home__price">
-          <svg class="home__icon">
-            <use xlink:href="./sprite.svg#icon-key"></use>
-          </svg>
-          <p>$1,200,000</p>
-        </div>
-        <button class="home__button">contact Relators</button>
-      </div> -->
-
+      <button class="home__button">contact Relators</button>
+    </div>
+    <div class="home">
+      <img src="./Images/house-4.jpeg" alt="Beautiful Family House" srcset="" class="home__image" />
+      <h5 class="home__name">Beautiful Family House</h5>
+      <div class="home__location">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-location2"></use>
+        </svg>
+        <p>USA</p>
+      </div>
+      <div class="home__roomcounts">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-user"></use>
+        </svg>
+        <p>5 rooms</p>
+      </div>
+      <div class="home__area">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-expand"></use>
+        </svg>
+        <p>325m<sup>2</sup></p>
+      </div>
+      <div class="home__price">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-key"></use>
+        </svg>
+        <p>$1,200,000</p>
+      </div>
+      <button class="home__button">contact Relators</button>
+    </div>
+    <div class="home">
+      <img src="./Images/house-5.jpeg" alt="Beautiful Family House" srcset="" class="home__image" />
+      <h5 class="home__name">Beautiful Family House</h5>
+      <div class="home__location">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-location2"></use>
+        </svg>
+        <p>USA</p>
+      </div>
+      <div class="home__roomcounts">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-user"></use>
+        </svg>
+        <p>5 rooms</p>
+      </div>
+      <div class="home__area">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-expand"></use>
+        </svg>
+        <p>325m<sup>2</sup></p>
+      </div>
+      <div class="home__price">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-key"></use>
+        </svg>
+        <p>$1,200,000</p>
+      </div>
+      <button class="home__button">contact Relators</button>
+    </div>
+    <div class="home">
+      <img src="./Images/house-6.jpeg" alt="Beautiful Family House" srcset="" class="home__image" />
+      <h5 class="home__name">Beautiful Family House</h5>
+      <div class="home__location">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-location2"></use>
+        </svg>
+        <p>USA</p>
+      </div>
+      <div class="home__roomcounts">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-user"></use>
+        </svg>
+        <p>5 rooms</p>
+      </div>
+      <div class="home__area">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-expand"></use>
+        </svg>
+        <p>325m<sup>2</sup></p>
+      </div>
+      <div class="home__price">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-key"></use>
+        </svg>
+        <p>$1,200,000</p>
+      </div>
+      <button class="home__button">contact Relators</button>
+    </div>
+    <div class="home">
+      <img src="./Images/house-2.jpeg" alt="Modern Glass Villa" srcset="" class="home__image" />
+      <h5 class="home__name">Modern Glass Villa</h5>
+      <div class="home__location">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-location2"></use>
+        </svg>
+        <p>Canada</p>
+      </div>
+      <div class="home__roomcounts">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-user"></use>
+        </svg>
+        <p>6 rooms</p>
+      </div>
+      <div class="home__area">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-expand"></use>
+        </svg>
+        <p>450m<sup>2</sup></p>
+      </div>
+      <div class="home__price">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-key"></use>
+        </svg>
+        <p>$1,200,000</p>
+      </div>
+      <button class="home__button">contact Relators</button>
+    </div>
+    <div class="home">
+      <img src="./Images/house-3.jpeg" alt="Cozy Country House" srcset="" class="home__image" />
+      <h5 class="home__name">Cozy Country House</h5>
+      <div class="home__location">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-location2"></use>
+        </svg>
+        <p>UK</p>
+      </div>
+      <div class="home__roomcounts">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-user"></use>
+        </svg>
+        <p>4 rooms</p>
+      </div>
+      <div class="home__area">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-expand"></use>
+        </svg>
+        <p>250m<sup>2</sup></p>
+      </div>
+      <div class="home__price">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-key"></use>
+        </svg>
+        <p>$850,000</p>
+      </div>
+      <button class="home__button">contact Relators</button>
+    </div>
+    <div class="home">
+      <img src="./Images/house-4.jpeg" alt="Beautiful Family House" srcset="" class="home__image" />
+      <h5 class="home__name">Large Rustical Villa</h5>
+      <div class="home__location">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-location2"></use>
+        </svg>
+        <p>USA</p>
+      </div>
+      <div class="home__roomcounts">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-user"></use>
+        </svg>
+        <p>5 rooms</p>
+      </div>
+      <div class="home__area">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-expand"></use>
+        </svg>
+        <p>325m<sup>2</sup></p>
+      </div>
+      <div class="home__price">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-key"></use>
+        </svg>
+        <p>$1,200,000</p>
+      </div>
+      <button class="home__button">contact Relators</button>
+    </div>
+    <div class="home">
+      <img src="./Images/house-5.jpeg" alt="Beautiful Family House" srcset="" class="home__image" />
+      <h5 class="home__name">Majestic Place House</h5>
+      <div class="home__location">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-location2"></use>
+        </svg>
+        <p>USA</p>
+      </div>
+      <div class="home__roomcounts">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-user"></use>
+        </svg>
+        <p>5 rooms</p>
+      </div>
+      <div class="home__area">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-expand"></use>
+        </svg>
+        <p>325m<sup>2</sup></p>
+      </div>
+      <div class="home__price">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-key"></use>
+        </svg>
+        <p>$1,200,000</p>
+      </div>
+      <button class="home__button">contact Relators</button>
+    </div>
+    <div class="home">
+      <img src="./Images/house-6.jpeg" alt="Beautiful Family House" srcset="" class="home__image" />
+      <h5 class="home__name">Modern Family Apartment</h5>
+      <div class="home__location">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-location2"></use>
+        </svg>
+        <p>USA</p>
+      </div>
+      <div class="home__roomcounts">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-user"></use>
+        </svg>
+        <p>5 rooms</p>
+      </div>
+      <div class="home__area">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-expand"></use>
+        </svg>
+        <p>325m<sup>2</sup></p>
+      </div>
+      <div class="home__price">
+        <svg class="home__icon">
+          <use xlink:href="./sprite.svg#icon-key"></use>
+        </svg>
+        <p>$1,200,000</p>
+      </div>
+      <button class="home__button">contact Relators</button>
+    </div> -->
   </div>
 
 
