Add addForm page

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Document</title>
+  <title>Home</title>
 
   <!-- Animation When are in certain Part Package -->
   <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
 
-  <link rel="stylesheet" href="./css/index.css" />
+  <link rel="stylesheet" href="./css/home.css" />
 
 
   <!-- CDN Font Awesome Including -->
@@ -57,6 +57,8 @@
       <button class="next">&#10095;</button>
     </div>
   </div>
+
+  
   <div class="top-relators">
     <h3 class="heading-3">Top 3 Realtors</h3>
 
@@ -177,6 +179,7 @@
 
   <form class="search">
     <input type="text" placeholder="Search" id="search">
+    <a href="./addTodo.html">Add Todo</a>
   </form>
 
   <div class="homes">
