Learned session storage and local storage differnces

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 
   <form class="search">
     <input type="text" placeholder="Search" id="search">
-    <a href="./addTodo.html">Add Todo</a>
+    <a href="./addHouse.html">Add House</a>
   </form>
 
   <div class="homes">
@@ -530,16 +530,6 @@
 
 
 
-  <script>
-
-      function hambergMenuOpened(){
-
-      
-        
-
-      }
-
-  </script>
 
 
 
