Changes js to typescript for only addHouse

--- a/index.html
+++ b/index.html
@@ -183,8 +183,6 @@
   </form>
 
   <div class="homes">
-
-
     <i class="fa-solid fa-refresh fa-spin" style="width: 22px;display: block;margin: 0 auto;"></i>
 
     <!-- <div class="home">
@@ -516,17 +514,16 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
 
+  <script type="module"  src="./Carousels.js"></script>
 
 
+  <script type="module"  src="./SearchOnTheBasisOfNoofRoom.js"></script>
 
 
-  <script type="module" src="./main.js"></script>
+  <script type="module" src="./SearchOnTheBasisOfCountry.js" ></script>
 
 
-  <script type="module" src="./SearchNoofRoom.js"></script>
-
-
-  <script src="./SearchOnTheBasisOfCountry.js" type="module"></script>
+  <script type="module"  src="./FetchGharInfoAndDisplay.js"></script>
 
 
 
